Updated Menu module
Updated menuBean, note, menuview, menu.xhtml
Updates include timestamp & refractor of menu.xhtml

--- a/ca2/web/assets/css/bootstrap.css
+++ b/ca2/web/assets/css/bootstrap.css
@@ -6544,6 +6544,10 @@ button.close {
 .affix {
   position: fixed;
 }
+.selectWidth {
+	width: auto;
+  	margin:10px;
+}
 @-ms-viewport {
   width: device-width;
 }
